# api-key-precommit

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
api_key_checker/: checker.py
tests/: test_checker.py
